Fixed My socials bar being the whole screen on smaller screens, added a main.js file and added a <script> tag on nav(for each nav bar in the project

--- a/FileStorage/main.css
+++ b/FileStorage/main.css
@@ -381,7 +381,7 @@ article div video {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    max-width: 100%;
+    max-width: 80%;
 }
 #future a{
     text-decoration: none;
